--- a/templates/child-development-model.html
+++ b/templates/child-development-model.html
@@ -80,7 +80,7 @@
                         <ul class="categories-list">
                             <li><a href="{% url 'humble-beginning' %}">Humble Beginning</a></li>
                             <li><a href="{% url 'child-development' %}">Child Development Model</a></li>
-                            <li><a href="#">Feel for the Poor Families</a></li>
+                            <li><a href="{% url 'feel-for-poor' %}">Feel for the Poor Families</a></li>
                         </ul>
                     </div>
                 </div>
