--- a/templates/home.html
+++ b/templates/home.html
@@ -157,14 +157,14 @@
                         <div class="overlay-box">
                             <div class="overlay-inner">
                                 <div class="content">
-                                    <a href="#" class="link"><i class="icon fa fa-link"></i></a>
+                                    <a href="{% url 'humble-beginning' %}" class="link"><i class="icon fa fa-link"></i></a>
                                 </div>
                             </div>
                         </div>
                     </figure>
                     <div class="lower-content">
-                        <h4><a href="#">Humble Beginning</a></h4>
-                        <div class="text">We are a nationwide ministry in Uganda in which thousands of children <br /> will reap the benefits of one man’s clear God-given vision.</div>
+                        <h4><a href="{% url 'humble-beginning' %}">Humble Beginning</a></h4>
+                        <div class="text">We are a nationwide ministry in Uganda in which thousands of children <br /> will reap the benefits of one man's clear God-given vision.</div>
                         <div class="progress-box">
                             <div class="progress" data-value="10">
                                 <div class="progress-bar" role="progressbar" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100">
@@ -188,13 +188,13 @@
                         <div class="overlay-box">
                             <div class="overlay-inner">
                                 <div class="content">
-                                    <a href="#" class="link"><i class="icon fa fa-link"></i></a>
+                                    <a href="{% url 'child-development' %}" class="link"><i class="icon fa fa-link"></i></a>
                                 </div>
                             </div>
                         </div>
                     </figure>
                     <div class="lower-content">
-                        <h4><a href="#">Our Child Development Model</a></h4>
+                        <h4><a href="{% url 'child-development' %}">Our Child Development Model</a></h4>
                         <div class="text">Through our holistic child development model, we tackle all the nature of poverty <br /> that surrounds the poor, orphaned and other vulnerable children.</div>
                         <div class="progress-box">
                             <div class="progress" data-value="10">
@@ -219,13 +219,13 @@
                         <div class="overlay-box">
                             <div class="overlay-inner">
                                 <div class="content">
-                                    <a href="#" class="link"><i class="icon fa fa-link"></i></a>
+                                    <a href="{% url 'feel-for-poor' %}" class="link"><i class="icon fa fa-link"></i></a>
                                 </div>
                             </div>
                         </div>
                     </figure>
                     <div class="lower-content">
-                        <h4><a href="#">Feel for the Poor Children</a></h4>
+                        <h4><a href="{% url 'feel-for-poor' %}">Feel for the Poor Children</a></h4>
                         <div class="text">We feel that the poor, orphaned and other vulnerable if set free from this bondage of poverty can come up into an era of freedom from poverty and its associated setbacks.</div>
                         <div class="progress-box">
                             <div class="progress" data-value="10">
