--- a/templates/humble-beginning.html
+++ b/templates/humble-beginning.html
@@ -79,8 +79,8 @@
                         <div class="sidebar-title">Related Links</div>
                         <ul class="categories-list">
                             <li><a href="{% url 'humble-beginning' %}">Humble Beginning</a></li>
-                            <li><a href="#">Child Development Model</a></li>
-                            <li><a href="#">Feel for the Poor Families</a></li>
+                            <li><a href="{% url 'child-development' %}">Child Development Model</a></li>
+                            <li><a href="{% url 'feel-for-poor' %}">Feel for the Poor Families</a></li>
                         </ul>
                     </div>
                 </div>
