--- a/templates/contact.html
+++ b/templates/contact.html
@@ -35,12 +35,12 @@
                             <div class="right-column single-info">
                                 <div class="icon-box"><i class="flaticon-mail"></i></div>
                                 <h5>Email</h5>
-                                <div class="text">mugizijackson@gmail.com</div>
+                                <div class="text">crelam22@gmail.com</div>
                             </div>
                             <div class="right-column single-info">
                                 <div class="icon-box"><i class="flaticon-phone-call-1"></i></div>
                                 <h5>Phone No</h5>
-                                <div class="text">+256 772 578 928</div>
+                                <div class="text">+256772578928 | +18039602594</div>
                             </div>
                         </div>
                     </div>
