--- a/templates/donate.html
+++ b/templates/donate.html
@@ -1452,7 +1452,7 @@
                             Mugisha Renold is an active young boy who was born in Bushenyi – Ishaka Municipality, western Uganda where he lives with his parents and 3 siblings. His parents work on a market stall  on daily basis and earn approximately  US $3 to US $22 which is not adequate to cater for basic needs like education, clothes, food and  medical care. He attends formal education and his dream is to become a teacher.He loves color Blue. He needs a support of US $186 per term of 3 months that will cater for her tuition fees, food and accommodation. Your kind sponsorship will be a blessing to this needy child
                         </div> -->
                         <ul class="price clearfix">
-                            <li>Gender: <span>Male</span></li>
+                            <li>Gender: <span>Female</span></li>
                             <li>Birthday: <span>19-10-2010</span></li>
                         </ul>
                         <!-- <div class="donate-box"><button class="donate-box-btn theme-btn-two">Donate Now</button></div> -->
@@ -1497,7 +1497,7 @@
                             Mugisha Renold is an active young boy who was born in Bushenyi – Ishaka Municipality, western Uganda where he lives with his parents and 3 siblings. His parents work on a market stall  on daily basis and earn approximately  US $3 to US $22 which is not adequate to cater for basic needs like education, clothes, food and  medical care. He attends formal education and his dream is to become a teacher.He loves color Blue. He needs a support of US $186 per term of 3 months that will cater for her tuition fees, food and accommodation. Your kind sponsorship will be a blessing to this needy child
                         </div> -->
                         <ul class="price clearfix">
-                            <li>Gender: <span>Male</span></li>
+                            <li>Gender: <span>Female</span></li>
                             <li>Birthday: <span>1-1-2011</span></li>
                         </ul>
                         <!-- <div class="donate-box"><button class="donate-box-btn theme-btn-two">Donate Now</button></div> -->
@@ -3297,7 +3297,7 @@
                             Mugisha Renold is an active young boy who was born in Bushenyi – Ishaka Municipality, western Uganda where he lives with his parents and 3 siblings. His parents work on a market stall  on daily basis and earn approximately  US $3 to US $22 which is not adequate to cater for basic needs like education, clothes, food and  medical care. He attends formal education and his dream is to become a teacher.He loves color Blue. He needs a support of US $186 per term of 3 months that will cater for her tuition fees, food and accommodation. Your kind sponsorship will be a blessing to this needy child
                         </div> -->
                         <ul class="price clearfix">
-                            <li>Gender: <span>Female</span></li>
+                            <li>Gender: <span>Male</span></li>
                             <li>Birthday: <span>1-11-2016</span></li>
                         </ul>
                         <!-- <div class="donate-box"><button class="donate-box-btn theme-btn-two">Donate Now</button></div> -->
@@ -3342,7 +3342,7 @@
                             Mugisha Renold is an active young boy who was born in Bushenyi – Ishaka Municipality, western Uganda where he lives with his parents and 3 siblings. His parents work on a market stall  on daily basis and earn approximately  US $3 to US $22 which is not adequate to cater for basic needs like education, clothes, food and  medical care. He attends formal education and his dream is to become a teacher.He loves color Blue. He needs a support of US $186 per term of 3 months that will cater for her tuition fees, food and accommodation. Your kind sponsorship will be a blessing to this needy child
                         </div> -->
                         <ul class="price clearfix">
-                            <li>Gender: <span>Male</span></li>
+                            <li>Gender: <span>Female</span></li>
                             <li>Birthday: <span>12-6-2014</span></li>
                         </ul>
                         <!-- <div class="donate-box"><button class="donate-box-btn theme-btn-two">Donate Now</button></div> -->
@@ -5367,7 +5367,7 @@
                             Mugisha Renold is an active young boy who was born in Bushenyi – Ishaka Municipality, western Uganda where he lives with his parents and 3 siblings. His parents work on a market stall  on daily basis and earn approximately  US $3 to US $22 which is not adequate to cater for basic needs like education, clothes, food and  medical care. He attends formal education and his dream is to become a teacher.He loves color Blue. He needs a support of US $186 per term of 3 months that will cater for her tuition fees, food and accommodation. Your kind sponsorship will be a blessing to this needy child
                         </div> -->
                         <ul class="price clearfix">
-                            <li>Gender: <span>Female</span></li>
+                            <li>Gender: <span>Male</span></li>
                             <li>Birthday: <span>1-3-2017</span></li>
                         </ul>
                         <!-- <div class="donate-box"><button class="donate-box-btn theme-btn-two">Donate Now</button></div> -->
@@ -7722,7 +7722,7 @@
             <div class="col-lg-4 col-md-6 col-sm-12 cause-column">
                 <div class="single-cause-content inner-box wow fadeInUp" data-wow-delay="0ms" data-wow-duration="1500ms">
                     <figure class="image-box">
-                        <img src="{% static 'images/resource/171.jpg' %}" alt="">
+                        <img src="{% static 'images/resource/172.jpg' %}" alt="">
                         <!--Overlay Box-->
                         <div class="overlay-box">
                             <div class="overlay-inner">
@@ -7770,7 +7770,7 @@
             <div class="col-lg-4 col-md-6 col-sm-12 cause-column">
                 <div class="single-cause-content inner-box wow fadeInUp" data-wow-delay="0ms" data-wow-duration="1500ms">
                     <figure class="image-box">
-                        <img src="{% static 'images/resource/172.jpg' %}" alt="">
+                        <img src="{% static 'images/resource/171.jpg' %}" alt="">
                         <!--Overlay Box-->
                         <div class="overlay-box">
                             <div class="overlay-inner">
@@ -8041,7 +8041,7 @@
                             Mugisha Renold is an active young boy who was born in Bushenyi – Ishaka Municipality, western Uganda where he lives with his parents and 3 siblings. His parents work on a market stall  on daily basis and earn approximately  US $3 to US $22 which is not adequate to cater for basic needs like education, clothes, food and  medical care. He attends formal education and his dream is to become a teacher.He loves color Blue. He needs a support of US $186 per term of 3 months that will cater for her tuition fees, food and accommodation. Your kind sponsorship will be a blessing to this needy child
                         </div> -->
                         <ul class="price clearfix">
-                            <li>Gender: <span>Male</span></li>
+                            <li>Gender: <span>Female</span></li>
                             <li>Birthday: <span>3-1-2016</span></li>
                         </ul>
                         <!-- <div class="donate-box"><button class="donate-box-btn theme-btn-two">Donate Now</button></div> -->
@@ -8088,7 +8088,7 @@
                             Mugisha Renold is an active young boy who was born in Bushenyi – Ishaka Municipality, western Uganda where he lives with his parents and 3 siblings. His parents work on a market stall  on daily basis and earn approximately  US $3 to US $22 which is not adequate to cater for basic needs like education, clothes, food and  medical care. He attends formal education and his dream is to become a teacher.He loves color Blue. He needs a support of US $186 per term of 3 months that will cater for her tuition fees, food and accommodation. Your kind sponsorship will be a blessing to this needy child
                         </div> -->
                         <ul class="price clearfix">
-                            <li>Gender: <span>Male</span></li>
+                            <li>Gender: <span>Female</span></li>
                             <li>Birthday: <span>3-1-2015</span></li>
                         </ul>
                         <!-- <div class="donate-box"><button class="donate-box-btn theme-btn-two">Donate Now</button></div> -->
@@ -8136,7 +8136,7 @@
                             Mugisha Renold is an active young boy who was born in Bushenyi – Ishaka Municipality, western Uganda where he lives with his parents and 3 siblings. His parents work on a market stall  on daily basis and earn approximately  US $3 to US $22 which is not adequate to cater for basic needs like education, clothes, food and  medical care. He attends formal education and his dream is to become a teacher.He loves color Blue. He needs a support of US $186 per term of 3 months that will cater for her tuition fees, food and accommodation. Your kind sponsorship will be a blessing to this needy child
                         </div> -->
                         <ul class="price clearfix">
-                            <li>Gender: <span>Male</span></li>
+                            <li>Gender: <span>Female</span></li>
                             <li>Birthday: <span>3-1-2015</span></li>
                         </ul>
                         <!-- <div class="donate-box"><button class="donate-box-btn theme-btn-two">Donate Now</button></div> -->
@@ -8447,7 +8447,7 @@
                         </div>
                     </figure>
                     <div class="lower-content">
-                        <h4><a href="#">Akankwasa Cynthia</a></h4>
+                        <h4><a href="#">Asinga Isabela</a></h4>
                         <div class="text">
                             <p>
                                 <a class="btn bg-secondary text-light" data-bs-toggle="collapse" href="#collapse186" role="button" aria-expanded="false" aria-controls="collapseExample">
@@ -8611,7 +8611,7 @@
                             Mugisha Renold is an active young boy who was born in Bushenyi – Ishaka Municipality, western Uganda where he lives with his parents and 3 siblings. His parents work on a market stall  on daily basis and earn approximately  US $3 to US $22 which is not adequate to cater for basic needs like education, clothes, food and  medical care. He attends formal education and his dream is to become a teacher.He loves color Blue. He needs a support of US $186 per term of 3 months that will cater for her tuition fees, food and accommodation. Your kind sponsorship will be a blessing to this needy child
                         </div> -->
                         <ul class="price clearfix">
-                            <li>Gender: <span>Male</span></li>
+                            <li>Gender: <span>Female</span></li>
                             <li>Birthday: <span>27-10-2016</span></li>
                         </ul>
                         <!-- <div class="donate-box"><button class="donate-box-btn theme-btn-two">Donate Now</button></div> -->
@@ -8802,7 +8802,7 @@
                             Mugisha Renold is an active young boy who was born in Bushenyi – Ishaka Municipality, western Uganda where he lives with his parents and 3 siblings. His parents work on a market stall  on daily basis and earn approximately  US $3 to US $22 which is not adequate to cater for basic needs like education, clothes, food and  medical care. He attends formal education and his dream is to become a teacher.He loves color Blue. He needs a support of US $186 per term of 3 months that will cater for her tuition fees, food and accommodation. Your kind sponsorship will be a blessing to this needy child
                         </div> -->
                         <ul class="price clearfix">
-                            <li>Gender: <span>Male</span></li>
+                            <li>Gender: <span>Female</span></li>
                             <li>Birthday: <span>27-11/-2011</span></li>
                         </ul>
                         <!-- <div class="donate-box"><button class="donate-box-btn theme-btn-two">Donate Now</button></div> -->
@@ -9134,7 +9134,7 @@
                             Mugisha Renold is an active young boy who was born in Bushenyi – Ishaka Municipality, western Uganda where he lives with his parents and 3 siblings. His parents work on a market stall  on daily basis and earn approximately  US $3 to US $22 which is not adequate to cater for basic needs like education, clothes, food and  medical care. He attends formal education and his dream is to become a teacher.He loves color Blue. He needs a support of US $186 per term of 3 months that will cater for her tuition fees, food and accommodation. Your kind sponsorship will be a blessing to this needy child
                         </div> -->
                         <ul class="price clearfix">
-                            <li>Gender: <span>Male</span></li>
+                            <li>Gender: <span>Female</span></li>
                             <li>Birthday: <span>10-11-2016</span></li>
                         </ul>
                         <!-- <div class="donate-box"><button class="donate-box-btn theme-btn-two">Donate Now</button></div> -->
