--- a/templates/donate.html
+++ b/templates/donate.html
@@ -4704,7 +4704,7 @@
             <div class="col-lg-4 col-md-6 col-sm-12 cause-column">
                 <div class="single-cause-content inner-box wow fadeInUp" data-wow-delay="0ms" data-wow-duration="1500ms">
                     <figure class="image-box">
-                        <img src="{% static 'images/resource/105.jpg' %}" alt="">
+                        <img src="{% static 'images/resource/105.JPG' %}" alt="">
                         <!--Overlay Box-->
                         <div class="overlay-box">
                             <div class="overlay-inner">
