--- a/templates/base.html
+++ b/templates/base.html
@@ -53,7 +53,7 @@
                         </ul>
                     </div>
                     <div class="upper-column info-box donate-box">
-                        <button class="donate-box-btn theme-btn" onclick="window.location.href='{% url 'donate' %}';">Donate Now</button>
+                        <button class="donate-box-btn theme-btn">Donate Now</button>
                     </div>
                 </div>
             </div>
@@ -242,6 +242,21 @@
         </div>
     </div>
     <!-- Footer-Bottome End -->
+
+    <!-- Donate popup -->
+    <div id="donate-popup" class="donate-popup">
+        <div class="close-donate"><span class="fa fa-close"></span></div>
+        <div class="popup-inner">
+            <div class="container">
+                <div class="donate-form-area">
+                    <h2>Donation Information</h2>
+                    <p>Through <strong>Silent Donor</strong> you can send a fully anonymous, tax-deductible donation to us! Just type in <strong>Crelam Ministries</strong> on their secure donation form. <strong>Silent Donor is the largest anonymous donation platform on the internet, based in the United States.</strong></p>
+                    <button class="donate-box-btn theme-btn" onclick="window.location.href='https://www.silentdonor.com/credit-debit-card-donation-form/';">Donate Now</button>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Donate popup -->
 
 <!--Scroll to top-->
 <button class="scroll-top scroll-to-target" data-target="html">
