--- a/templates/base.html
+++ b/templates/base.html
@@ -38,7 +38,7 @@
                         <div class="icon-box"><i class="flaticon-phone-call"></i></div>
                         <ul>
                             <li>
-                                <strong>+256772578928 | +18039602594</strong>
+                                <strong>+256772578928</strong>
                                 crelam22@gmail.com
                             </li>
                         </ul>
@@ -48,7 +48,7 @@
                         <ul>
                             <li>
                                 <strong>Mbarara,</strong>
-                                P.O. Box 1470, Mbarara, Uganda
+                                P.O. Box 1591, Mbarara, Uganda
                             </li>
                         </ul>
                     </div>
@@ -208,7 +208,7 @@
                             <div class="footer-title">Contacts</div>
                             <div class="text">
                                 <p>Mbarara, Uganda</p>
-                                <p>+256772578928 | +18039602594</p>
+                                <p>+256772578928</p>
                                 <p>crelam22@gmail.com</p>
                             </div>
                         </div>
@@ -250,7 +250,12 @@
             <div class="container">
                 <div class="donate-form-area">
                     <h2>Donation Information</h2>
-                    <p>Through <strong>Silent Donor</strong> you can send a fully anonymous, tax-deductible donation to us! Just type in <strong>Crelam Ministries</strong> on their secure donation form. <strong>Silent Donor is the largest anonymous donation platform on the internet, based in the United States.</strong></p>
+                    <p>Account Name: <strong>CRELAM MINISTRIES LIMITED</strong></p>
+                    <p>Account Number: <strong>9030021607605</strong></p>
+                    <p>Bank: <strong>Stanbic Uganda</strong></p>
+                    <p>Swift Code: <strong>SBICUGKXXX</strong></p>
+                    <hr />
+                    <p>OR: Through <strong>Silent Donor</strong> you can send a fully anonymous, tax-deductible donation to us! Just type in <strong>Crelam Ministries</strong> on their secure donation form. <strong>Silent Donor is the largest anonymous donation platform on the internet, based in the United States.</strong></p>
                     <button class="donate-box-btn theme-btn" onclick="window.location.href='https://www.silentdonor.com/credit-debit-card-donation-form/';">Donate Now</button>
                 </div>
             </div>
