--- a/templates/what-we-do.html
+++ b/templates/what-we-do.html
@@ -40,7 +40,15 @@
                             <li>We help develop children into all that God has intended them to be. CRELAM equips children today with skills to succeed in life tomorrow. We provide a child with an opportunity that encourages the development of all aspects of life of that child (that is, spiritual, physical, emotionally, and even economically).</li>
                             <li>Our child assistance is holistic in sense that we begin assisting a child in poverty when he is still below five years and we go all the way until when he is 22 years.</li>
                             <li>Our work is made effective with the help of community leaders including those in the church and local councils. These leaders' partnership with us tailors our holistic child assistance model to the contextualized needs of these  children in their respective communities to best deliver the complete-life care the children are highly in need.</li>
-                            <li>We work mainly through donations to our organization.</li>
+                            <li>We work mainly through donations to our organization. And provide the following:</li> 
+                            <ol>
+                                <li>Provide food to the poor, orphaned and other vulnerable children while at school for improved nutrition and good health.</li>
+                                <li>Pay school dues for the vulnerable children in order to help them acquire meaningful education that will give them skills for self-sustainability and poverty eradication in their respective communities.</li>
+                                <li>Provide school uniforms for the poor, orphaned and other vulnerable children while at school.</li>
+                                <li>Provide sanitation facilities in the schools where the vulnerable children are being cared for in order to ensure their good health.</li>
+                                <li>Support infrastructural development in the schools where our vulnerable children are being looked after.</li>
+                                <li>Support some families of the poor, orphaned and other vulnerable children (We provide food, some medical support and shelter to some of these families depending on the gravity of the need. This helps the affected children to concentrate on the studies).</li>
+                            </ol>
                         </ul>
                     </div>
                 </div>
