--- a/templates/base.html
+++ b/templates/base.html
@@ -250,12 +250,7 @@
             <div class="container">
                 <div class="donate-form-area">
                     <h2>Donation Information</h2>
-                    <p>Account Name: <strong>CRELAM MINISTRIES LIMITED</strong></p>
-                    <p>Account Number: <strong>9030021607605</strong></p>
-                    <p>Bank: <strong>Stanbic Uganda</strong></p>
-                    <p>Swift Code: <strong>SBICUGKXXX</strong></p>
-                    <hr />
-                    <p>OR: Through <strong>Silent Donor</strong> you can send a fully anonymous, tax-deductible donation to us! Just type in <strong>Crelam Ministries</strong> on their secure donation form. <strong>Silent Donor is the largest anonymous donation platform on the internet, based in the United States.</strong></p>
+                    <p>Through <strong>Silent Donor</strong> you can send a fully anonymous, tax-deductible donation to us! Just type in <strong>Crelam Ministries</strong> on their secure donation form. <strong>Silent Donor is the largest anonymous donation platform on the internet, based in the United States.</strong></p>
                     <button class="donate-box-btn theme-btn" onclick="window.location.href='https://www.silentdonor.com/credit-debit-card-donation-form/';">Donate Now</button>
                 </div>
             </div>
