--- a/templates/contact.html
+++ b/templates/contact.html
@@ -28,7 +28,7 @@
                             <div class="left-column single-info centred">
                                 <div class="icon-box"><i class="flaticon-map"></i></div>
                                 <h5>Address</h5>
-                                <div class="text">P.O. Box 1470, Mbarara, Uganda</div>
+                                <div class="text">P.O. Box 1591, Mbarara, Uganda</div>
                             </div>
                         </div>
                         <div class="col-lg-6 col-md-12 col-sm-12 column">
@@ -40,7 +40,40 @@
                             <div class="right-column single-info">
                                 <div class="icon-box"><i class="flaticon-phone-call-1"></i></div>
                                 <h5>Phone No</h5>
-                                <div class="text">+256772578928 | +18039602594</div>
+                                <div class="text">+256772578928</div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-lg-6 col-md-12 col-sm-12 contact-column">
+                <div class="contact-info">
+                    <div class="contact-title">Account Details</div>
+                    <div class="row">
+                        <div class="col-lg-6 col-md-12 col-sm-12 column">
+                            <div class="left-column single-info centred">
+                                <!-- <div class="icon-box"><i class="flaticon-map"></i></div> -->
+                                <h5>Account Name</h5>
+                                <div class="text">CRELAM MINISTRIES LIMITED</div>
+                            </div>
+                        </div>
+                        <div class="col-lg-6 col-md-12 col-sm-12 column">
+                            <div class="right-column single-info">
+                                <!-- <div class="icon-box"><i class="flaticon-mail"></i></div> -->
+                                <h5>Account Number</h5>
+                                <div class="text">9030021607605</div>
+                            </div>
+                            <div class="right-column single-info">
+                                <!-- <div class="icon-box"><i class="flaticon-phone-call-1"></i></div> -->
+                                <h5>Bank</h5>
+                                <div class="text">Stanbic Uganda</div>
+                            </div>
+                            <div class="right-column single-info">
+                                <!-- <div class="icon-box"><i class="flaticon-phone-call-1"></i></div> -->
+                                <h5>Swift Code</h5>
+                                <div class="text">SBICUGKXXX</div>
                             </div>
                         </div>
                     </div>
